# se4sci-project

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/source/: api.rst  conf.py  index.rst
src/examples/: example.py
src/graphics_4vecs/: logging_4vecs.py  plot_4vecs.py  transformations_4vecs.py
tests/: test_plot_4vecs.py  test_transformations_4vecs.py
