[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/graphics_4vecs/version.py"

[project]
name = "graphics_4vecs"
dynamic = ["version"]
readme = "README.md"
authors = [
  { name = "Cheryl Pappenheimer", email = "cheryl.theroux@gmail.com" },
  { name = "Mitanshu Thakore", email = "mthakore2@wisc.edu" },
  { name = "Lael Verace", email = "lverace@wisc.edu" },
]

dependencies = [
]

[project.optional-dependencies]
test = [
]
docs = [
]

[project.urls]
Homepage = "https://github.com/cpappenheimer/se4sci-project"

[tool.pytest.ini_options]
log_cli_level = "debug"

[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
extend-ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long
  "PT004",  # Use underscore for non-returning fixture (use usefixture instead)
]
typing-modules = ["mypackage._compat.typing"]
src = ["src"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
exclude = []
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.mypy]
files = "src"
#python_version = "3.9"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

# You can disable imports or control per-module/file settings here
[[tool.mypy.overrides]]
module = [ "numpy.*", "awkward.*", "uproot.*"]
ignore_missing_imports = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
graphics_4vecs = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.dependencies]
root = ">=6.28.4,<6.31"
numpy = ">=1.26.4,<1.27"
pandas = ">=2.2.2,<2.3"
uproot = ">=5.3.2,<5.4"

[tool.pixi.tasks]

[tool.pixi.feature.test.dependencies]
pytest = ">=7.2.0,<8.2"

[tool.pixi.feature.test.tasks]
run_tests = "pytest"
